# Stab

./: .gitmodules  AGENTS.md  CONTRIBUTE.md  Cargo.toml  LICENSE  README.md  justfile  rust-toolchain.toml
crates/stab-cli/: Cargo.toml
crates/stab-cli/src/: analyze_errors.rs  convert.rs  detection.rs  help.rs  input.rs  io_plan.rs  lib.rs  sample_dem.rs  streaming.rs  tests.rs
crates/stab-cli/src/tests/: convert.rs  generation.rs  help.rs  legacy.rs  m10.rs  m11.rs  m9.rs  path_alias.rs  resource.rs  result_text_compat.rs
crates/stab-cli/src/tests/m10/: channels.rs  parity_rows.rs  pf7_cli.rs
crates/stab-cli/src/tests/m9/: path_io.rs  pf7_cli.rs  sweep.rs
crates/stab-cli/tests/: binary.rs
crates/stab-core/: Cargo.toml
crates/stab-core/src/: circuit.rs  circuit_detecting_regions.rs  circuit_feedback.rs  circuit_flow.rs  circuit_generation.rs  circuit_inverse.rs  circuit_missing_detectors.rs  circuit_simplify.rs  circuit_tableau.rs  circuit_transforms.rs  dem.rs  dem_sampler.rs  detection.rs  error.rs  error_matcher.rs  gate.rs  ids.rs  lib.rs  matched_error.rs  mbqc_decomposition.rs  probability_util.rs  reference_sample_tree.rs  result_formats.rs  result_streaming.rs  result_text.rs  sampling.rs  sparse_rev_frame_tracker.rs  target.rs
crates/stab-core/src/bits/: clifford.rs  mod.rs  scalar.rs  simd.rs  transpose.rs
crates/stab-core/src/circuit/: api.rs  counts.rs  iter.rs  parser_fast.rs  printing.rs
crates/stab-core/src/circuit_detecting_regions/: tests.rs
crates/stab-core/src/circuit_detecting_regions/tests/: generated.rs
crates/stab-core/src/circuit_flow/: checker.rs  generators.rs  solver.rs  transitions.rs
crates/stab-core/src/circuit_generation/: color.rs  surface.rs  tests.rs
crates/stab-core/src/circuit_inverse/: qec.rs  reverse_flow.rs
crates/stab-core/src/circuit_missing_detectors/: folded_repeat.rs  tests.rs
crates/stab-core/src/dem/: analyze.rs  api.rs  arena_index.rs  coordinate_scan.rs  error_traversal.rs  generated_qec_tests.rs  graphlike.rs  hyper.rs  parser.rs  sat.rs  search_budget.rs  tag.rs  tests.rs  traversal.rs
crates/stab-core/src/dem/analyze/: budget.rs  (+14 more)
crates/stab-core/src/detection/: frame.rs  tests.rs
crates/stab-core/src/error_matcher/: budget.rs  filter.rs
crates/stab-core/src/gate/: decomposition.rs  flows.rs  metadata.rs  semantic_contract.rs  unitary.rs
crates/stab-core/src/result_formats/: dets.rs
crates/stab-core/src/sampling/: direct_z_measurement.rs  execute.rs  measurement_flip.rs  noise.rs  operation.rs  pauli_product.rs  reference.rs  small_frame.rs  stabilizer_frame.rs  stream.rs  tests.rs
crates/stab-core/src/sparse_rev_frame_tracker/: error_analysis.rs  pauli_product.rs  shifted_recurrence.rs  shifted_repeat.rs  tests.rs  unitary_repeat.rs
crates/stab-core/src/stabilizers/: clifford.rs  conversions.rs  error.rs  flow.rs  iter.rs  limits.rs  mod.rs  pauli.rs  tableau.rs  unitary.rs
crates/stab-core/tests/: bits.rs  circuit_api.rs  circuit_flow_generators.rs  circuit_flows.rs  circuit_generation.rs  circuit_inverse.rs  circuit_inverse_qec.rs  circuit_inverse_qec_m_det.rs  circuit_inverse_qec_mpad.rs  circuit_inverse_qec_mpp.rs  circuit_inverse_qec_mzz.rs  circuit_inverse_qec_noisy_measure_reset.rs  circuit_inverse_qec_noisy_measure_reset_detector.rs  circuit_inverse_qec_noisy_measurement.rs  circuit_inverse_qec_obs_include_pauli.rs  circuit_inverse_qec_pfm_b1.rs  circuit_inverse_qec_reset_measure_detector.rs  circuit_printing_resources.rs  circuit_simplify.rs  circuit_tableau.rs  circuit_time_reverse_flow_mzz_suffix.rs  circuit_transforms.rs  cq2_algebra_pauli_iterator.rs  cq2_algebra_resources.rs  cq2_algebra_tableau.rs  cq2_algebra_values.rs  cq2_bit_kernels.rs  cq2_circuit_api.rs  cq2_dem_format.rs  cq2_gate_contract.rs  cq2_result_formats.rs  cq2_result_io.rs  cq2_stim_format.rs  dem_analyzer_classical.rs  dem_analyzer_clifford.rs  dem_analyzer_controlled_pauli.rs  dem_analyzer_coordinates.rs  dem_analyzer_gauge.rs  dem_analyzer_heralded.rs  dem_analyzer_loop_folding.rs  (+44 more)
crates/stab-core/tests/circuit_generation/: resource.rs
crates/stab-core/tests/fixtures/: missing_detectors_honeycomb_missing_detector.stim
ops/bench/: Cargo.toml
ops/bench/fixtures/correctness-schema-v7/: completion.json  preflight.json  report.json  request.json
ops/bench/fixtures/correctness-schema-v7-statistical/: completion.json  preflight.json  report.json  request.json
ops/bench/src/: allocations.rs  baseline.rs  beta_gate.rs  comparability.rs  compare.rs  compare_evidence.rs  config.rs  error.rs  main.rs  manifest.rs  memory_gate.rs  process.rs  profile_evidence.rs  regression_waivers.rs  report.rs  root.rs  source_file.rs  stim.rs  thresholds.rs
ops/bench/src/baseline/: convert.rs  m10.rs  m11.rs  m4.rs  m6.rs  m7.rs  m8.rs  m9.rs  pf1.rs  pf2.rs  pf4.rs  pf5.rs  pf6.rs  rates.rs  tests.rs
ops/bench/src/process/: tests.rs
ops/bench/src/qualification/: checklist.rs  discovery.rs  io.rs  migration.rs  mod.rs  model.rs  status.rs  validation.rs
ops/compat-corpus/: Cargo.toml
ops/compat-corpus/src/: lib.rs
ops/oracle/: Cargo.toml
ops/oracle/src/: blocker_ledger.rs  fixtures.rs  main.rs  matrix.rs  process.rs  result_format_corpus.rs  safe_file.rs  statistical_contract.rs
ops/oracle/src/blocker_ledger/: digest.rs  evidence.rs  gate_contract.rs  oracle.rs  provenance.rs  selector.rs  statistical.rs  support.rs  tests.rs
ops/oracle/src/fixtures/: direct_rust.rs  milestone.rs  outputs.rs  paths.rs  qualification.rs  reverse_flow.rs  statistical.rs  tests.rs
ops/oracle/src/qualification/: artifact.rs  artifact_locator.rs  classification.rs  comparator.rs  executables.rs  execution_contract.rs  extract.rs  inventory.rs  mod.rs  model.rs  property.rs  property_validation.rs  public_api.rs  public_api_validation.rs  receipt.rs  report.rs  resource.rs  runner.rs  statistical_validation.rs  statistics.rs  tier.rs  validation.rs
ops/oracle/stim_helpers/: CMakeLists.txt  reverse_flow.cc
ops/pre-commit/: Cargo.toml
ops/pre-commit/src/: instruction_docs.rs  large_files.rs  main.rs  support.rs
(+598 files in other folders)
