[workspace]
resolver = "3"
members = [
    "crates/stab-cli",
    "crates/stab-core",
    "ops/bench",
    "ops/oracle",
    "ops/pre-commit",
]
default-members = [
    "crates/stab-core",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ifsheldon/Stab"
homepage = "https://github.com/ifsheldon/Stab"

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
gix = "0.85.0"
ignore = "0.4.26"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["io-util", "macros", "process", "rt-multi-thread", "signal"] }
wait-timeout = "0.2.1"

[workspace.lints.rust]
let_underscore_drop = "warn"
linker_messages = "allow"
missing_debug_implementations = "warn"
redundant_imports = "warn"
unsafe_code = "deny"
unreachable_pub = "warn"

[workspace.lints.clippy]
allow_attributes_without_reason = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
enum_glob_use = "warn"
expl_impl_clone_on_copy = "warn"
expect_used = "warn"
future_not_send = "warn"
indexing_slicing = "warn"
infallible_try_from = "warn"
invalid_upcast_comparisons = "warn"
iter_not_returning_iterator = "warn"
let_underscore_future = "warn"
lossy_float_literal = "warn"
mem_forget = "warn"
panic = "warn"
panic_in_result_fn = "warn"
rc_mutex = "warn"
string_slice = "warn"
todo = "warn"
unimplemented = "warn"
unchecked_time_subtraction = "warn"
unused_async = "warn"
unwrap_used = "warn"
wildcard_imports = "warn"
