[package]
name = "stab-cli"
version.workspace = true
edition.workspace = true
description = "Development CLI for comparing Stab against the pinned Stim oracle."
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
same-file = { workspace = true }
stab-core = { path = "../stab-core" }
thiserror = { workspace = true }

[dev-dependencies]
stab-compat-corpus = { path = "../../ops/compat-corpus" }
tempfile = { workspace = true }
