[package]
name = "stab-core"
version.workspace = true
edition.workspace = true
description = "Core circuit, detector error model, and simulator primitives for Stab."
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[features]
ops-contracts = []

[dependencies]
arrayvec = { workspace = true }
hashbrown = { workspace = true }
num-complex = { workspace = true }
rand = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
allocation-counter = { workspace = true }
proptest = { workspace = true }
