[package]
name = "stab-bench"
version.workspace = true
edition.workspace = true
description = "Benchmark orchestration for pinned Stim and Stab performance contracts."
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
stab-cli = { path = "../../crates/stab-cli" }
stab-core = { path = "../../crates/stab-core" }
thiserror = { workspace = true }
wait-timeout = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
