[package]
name = "stab-bench"
version.workspace = true
edition.workspace = true
description = "Benchmark orchestration for pinned Stim and Stab performance contracts."
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[features]
count-allocations = ["dep:allocation-counter"]

[lints]
workspace = true

[dependencies]
allocation-counter = { workspace = true, optional = true }
clap = { workspace = true }
csv = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
stab-cli = { path = "../../crates/stab-cli" }
stab-core = { path = "../../crates/stab-core" }
thiserror = { workspace = true }
wait-timeout = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
