[package]
name = "stab-compat-corpus"
version.workspace = true
edition.workspace = true
description = "Private checked compatibility-corpus support for Stab tests and operations."
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
