[package]
name = "stab-oracle"
version.workspace = true
edition.workspace = true
description = "Oracle orchestration for comparing Stab against pinned Stim."
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }
stab-core = { path = "../../crates/stab-core" }
thiserror = { workspace = true }
wait-timeout = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
